First pass at using scheduled_test intead of unittest

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,6 @@ description: A real pretend server for testing.
 author: Chris Strom <chris@eeecomputes.com>
 homepage: https://github.com/eee-c/plummbur-kruk
 dependencies:
-  unittest: any
+  scheduled_test: any
   dirty: any
   uuid: any
