--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: plummbur_kruk
-version: 0.0.2
+version: 0.0.3
 description: A real pretend server for testing.
 author: Chris Strom <chris@eeecomputes.com>
 homepage: https://github.com/eee-c/plummbur-kruk
 dependencies:
   dirty: ">=0.1.0 <0.1.1"
+  json: ">=0.6.9 <0.6.10"
   browser: ">=0.6.19 <0.6.20"
   scheduled_test: ">=0.6.19 <0.6.20"
   uuid: ">=0.1.6 <0.1.7"
