--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: plummbur_kruk
-version: 0.0.4
+version: 0.0.5
 description: A real pretend server for testing.
 author: Chris Strom <chris@eeecomputes.com>
 homepage: https://github.com/eee-c/plummbur-kruk
@@ -9,3 +9,4 @@ dependencies:
   browser: ">=0.6.19 <0.6.20"
   scheduled_test: ">=0.6.19 <0.6.20"
   uuid: ">=0.1.6 <0.1.7"
+  ansicolor: ">=0.0.9 <0.0.10"
