--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: plummbur_kruk
-version: 0.0.5
+version: 0.0.6
 description: A real pretend server for testing.
 author: Chris Strom <chris@eeecomputes.com>
 homepage: https://github.com/eee-c/plummbur-kruk
@@ -10,3 +10,4 @@ dependencies:
   scheduled_test: ">=0.6.19 <0.6.20"
   uuid: ">=0.1.6 <0.1.7"
   ansicolor: ">=0.0.9 <0.0.10"
+  intl: ">=0.6.19 <0.6.20"
