--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: plummbur_kruk
-version: 0.0.6
+version: 0.0.7
 description: A real pretend server for testing.
 author: Chris Strom <chris@eeecomputes.com>
 homepage: https://github.com/eee-c/plummbur-kruk
 dependencies:
-  dirty: ">=0.1.1 <0.1.2"
-  json: ">=0.6.9 <0.6.10"
-  browser: ">=0.6.19 <0.6.20"
-  scheduled_test: ">=0.6.19 <0.6.20"
+  dirty: ">=0.1.2 <0.1.3"
+  json: ">=0.8.1 <0.8.2"
+  browser: ">=0.8.1 <0.8.2"
   uuid: ">=0.1.6 <0.1.7"
   ansicolor: ">=0.0.9 <0.0.10"
-  intl: ">=0.6.19 <0.6.20"
+  intl: ">=0.8.1 <0.8.2"
+dev_dependencies:
+  scheduled_test: any
